Backend-deployment.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: backend-container
#   labels: 
#     app: backend-container
# spec:
#   replicas: 3
#   selector:
#     matchLabels:
#       app: backend-container
#   template: 
#     metadata:
#       labels:
#         app: backend-container
#     spec:
#       containers:
#         - name: backend-container
#           image: paraskamboj/backend-app:v3
#           ports:
#             - containerPort: 5000


apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend-container
  labels:
    app: backend-container
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-container
  template:  
    metadata:
      labels: 
        app: backend-container
    spec:
      containers:
        - name: backend-container
          image: paraskamboj/backend-app:v4
          ports: 
            - containerPort: 5000           
          resources:
            requests:
              cpu: "500m"
              memory:  "128Mi"
            limits:
              cpu: "1000m"
              memory: "500Mi"
