frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-container
  labels: 
    app: frontend-container
spec:
  replicas: 3
  selector:
    matchLabels:  
      app: frontend-container
  template:
    metadata:
      labels:
        app: frontend-container
    spec:
      containers:
        - name: frontend-container
          image: paraskamboj/frontend-app:v7
          ports:
            - containerPort: 80
