01-mysql-external.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: database-1.c18u66sw8gmt.ap-south-1.rds.amazonaws.com
