Service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  labels: 
    app: frontend-container    
spec:
  type: NodePort 
  selector:
    app: frontend-container
  ports: 
    - name: http
      port: 80
      targetPort: 80
